new file update

--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -75,8 +75,7 @@
         @* spinner end *@
 
     <!-- Login script -->
-    <script src="./js/Login.js"></script>
-
+    <script src="./js/Login/Login.js"></script>
 
     <!-- Jquery CDN Link -->
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
