--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -37,8 +37,8 @@
             <div class="sidebar-brand">
                 <h2>GRIM</h2>
             </div>
-            <ul class="sidebar-nav">
-                <li >
+            <ul class="sidebar-nav" id="sidebar-nav">
+                @* <li >
                     <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Dashboard</a>
                 </li>
                 <li >
@@ -52,10 +52,10 @@
                 </li>
                 <li>
                     <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Notifications"><i class="fa fa-user"></i>Notifications</a>
-                </li>
-                <li onclick="logout()">
+                </li> *@
+                @* <li onclick="logout()">
                     <a href="#"><i class="fa-solid fa-arrow-right-from-bracket"></i>LogOut</a>
-                </li>
+                </li> *@
             </ul>
         </aside>
 
@@ -77,9 +77,38 @@
     <!-- Jquery CDN Link -->
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
 
-    <script src="~/js/Home.js"></script>
     <script src="~/js/main.js"></script>
+    <script src="~/js/Home/Home.js"></script>
     <script src="~/js/Logout.js"></script>
+    <script>
+        @* const Logindata = JSON.parse(localStorage.getItem("user_info")); *@
+        console.log("Logindata----->", Logindata);
+        if (!Logindata) {
+            window.location.href = "Login";
+        }
+        var menu ;
+        console.log(Logindata.user[0].role_id);
+        if(Logindata.user[0].role_id){
+            var menuOptions = roles_menus[Logindata.user[0].role_id];
+            var listItems = menuOptions.map(function(option) {
+            console.log("option->>>",option);
+            console.log("menu->>>",menu);
+                menu += `
+                    <li>
+                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index"><i class="fa fa-user">${option}</a>
+                    </li>
+                `;
+            });
+            menu +=`
+                <li onclick="logout()">
+                    <a href="#"><i class="fa-solid fa-arrow-right-from-bracket"></i>LogOut</a>
+                </li>
+            `;
+        }
+        
+       console.log("menu->>>",menu);
+        document.getElementById("sidebar-nav").innerHTML = menu;
+    </script>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
