--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -37,26 +37,28 @@
             <div class="sidebar-brand">
                 <h2>GRIM</h2>
             </div>
-            <ul class="sidebar-nav" id="sidebar-nav">
-                <li>
-                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Dashboard</a>
-                </li>
-                <li >
-                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="MyProfile"></i>Profile</a>
-                </li>
-                <li class ="active">
-                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="MyRequests"></i>My Requests</a>
-                </li>
-                <li>
-                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="NewIndent"></i>New Indent</a>
-                </li>
-                <li>
-                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Notifications"></i>Notifications</a>
-                </li> 
-                <li onclick="logout()">
-                    <a class="nav-link" ></i>LogOut</a>
-                </li>
-            </ul>
+            <div>
+                <ul class="sidebar-nav" id="sidebar-nav">
+                    @* <li>
+                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Dashboard</a>
+                    </li>
+                    <li >
+                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="MyProfile"></i>Profile</a>
+                    </li>
+                    <li class ="active">
+                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="MyRequests"></i>My Requests</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="NewIndent"></i>New Indent</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Notifications"></i>Notifications</a>
+                    </li>  *@
+                    @* <li onclick="logout()">
+                        <a class="nav-link" >LogOut</a>
+                    </li> *@
+                </ul>
+            </div>
         </aside>
 
         <div id="navbar-wrapper">
@@ -86,20 +88,47 @@
         if (!Logindata) {
             window.location.href = "Login";
         }
-        var menu ;
+        var menu=[] ;
         console.log("Logindata.user[0].role_id)->>",Logindata.user[0].role_id);
-        if(Logindata.user[0].role_id){
+
+        var menuOptions = roles_menus[Logindata.user[0].role_id];
+
+
+
+        $.each(menuOptions, function(index, option) {
+            var $li = $("<li>");
+            var $a = $("<a>").addClass("nav-link").attr({
+                "asp-area": "",
+                "asp-controller": "Home",
+                "asp-action": option,
+                "href": option,
+            }).html(`<i class="fa fa-user"></i>${option}`);
+            $li.append($a);
+            $("#sidebar-nav").append($li);
+        });
+        var $li = $("<li>");
+        $b = $("<a>").addClass("nav-link").attr({"onclick":"logout()"}).html(`<i class="fa fa-user"></i>LogOut`);
+        $li.append($b);
+        $("#sidebar-nav").append($li);
+
+
+        @* $.each(menuOptions, function(index, option) {
+            var $li = $("<li>").text(option);
+            console.log($li);
+            $("#sidebar-nav").append($li);
+        }); *@
+
+
+        @* if(Logindata.user[0].role_id){
             var menuOptions = roles_menus[Logindata.user[0].role_id];
             var listItems = menuOptions.map(function(option) {
-            console.log("option->>>",option);
-            console.log("menu->>>",menu);
                 menu += `
                     <li>
                         <a class="nav-link" asp-area="" asp-controller="Home" asp-action="${option}"><i class="fa fa-user">${option}</a>
                     </li>
                 `;
             });
-            menu +=`
+        menu +=`
                 <li onclick="logout()">
                     <a href="#"><i class="fa-solid fa-arrow-right-from-bracket"></i>LogOut</a>
                 </li>
@@ -107,7 +136,7 @@
         }
 
        console.log("menu->>>",menu);
-        @* /document.getElementById("sidebar-nav").innerHTML = menu; *@
+        document.getElementById("sidebar-nav").innerHTML = menu; *@
     </script>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
