--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,100 +9,122 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/GrimLogin.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/Login.css" asp-append-version="true" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <!-- Google Fonts Link -->
-    <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-        rel="stylesheet">
 
-
-    <!--Import materialize.css-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&amp;display=swap">
-    <link rel="stylesheet" href="~/css/sidebar.css">
-
-    @* <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> *@
-
+    <!--Bootstrap cdn-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href='https://fonts.googleapis.com/css?family=Lato:300,400|Montserrat:700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+    <!--Local css-->
+    <link rel="stylesheet" type="text/css" href="~/css/sidebarandheader.css">
 </head>
 <body>
 
     @* sidebar menu *@
-    <div id="wrapper">
-
-        <aside id="sidebar-wrapper">
+    <div id="wrapper"  class="toggled" >
+         <!-- sidebar start -->
+            <aside id="sidebar-wrapper">
             <div class="sidebar-brand">
-                <h2>GRIM</h2>
+                <h2>Logo</h2>
             </div>
-            <div>
+          
                 <ul class="sidebar-nav" id="sidebar-nav">
-                    @* <li>
-                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Dashboard</a>
-                    </li>
-                    <li >
-                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="MyProfile"></i>Profile</a>
-                    </li>
-                    <li class ="active">
-                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="MyRequests"></i>My Requests</a>
-                    </li>
-                    <li>
-                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="NewIndent"></i>New Indent</a>
-                    </li>
-                    <li>
-                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Notifications"></i>Notifications</a>
-                    </li>  *@
-                    @* <li onclick="logout()">
-                        <a class="nav-link" >LogOut</a>
-                    </li> *@
-                </ul>
-            </div>
-        </aside>
+                    @* display all side menu name *@
+                </ul> 
+         
+            </aside>
+        <!-- sidebar end -->
 
+        <!-- header start -->
         <div id="navbar-wrapper">
-            <nav class="navbar navbar-inverse">
-                <div class="container-fluid">
-                    <div class="navbar-header">
-                        <a href="#" class="navbar-brand" id="sidebar-toggle"><i class="fa fa-bars"></i></a>
-                        <a href="#" id="username"></a>
-                    </div>
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid nav-container-fluid ">
+            <div class="navbar-header">
+                <div class="header-inner">
+                <div>
+                    <a href="#" class="navbar-brand" id="sidebar-toggle"><i class="fa fa-bars"></i></a>
                 </div>
-            </nav>
+                <div class="header-inner-icon">
+                    <span><i class="fa fa-bell" aria-hidden="true"></i></span>
+                    <span><i class="fa fa-cart-plus" aria-hidden="true"></i></span>
+                    <span><i class="fa fa-user-circle" aria-hidden="true"></i></span><span id="username"></span>
+                </div>
+                </div>
+
+            </div>
+            </div>
+        </nav>
         </div>
+        <!-- header end -->
         @RenderBody()
     </div>
     @* sidebar menu end *@
 
 
-    <!-- Jquery CDN Link -->
-    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-
     <script src="~/js/main.js"></script>
-    <script src="~/js/Home/Home.js"></script>
+
+
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/Logout.js"></script>
+
+    <script src="~/js/Home/Home.js"></script>
+    <!-- Jquery CDN Link -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script type="text/javascript">
+        const $button = document.querySelector('#sidebar-toggle');
+        const $wrapper = document.querySelector('#wrapper');
+
+        $button.addEventListener('click', (e) => {
+            e.preventDefault();
+            $wrapper.classList.toggle('toggled');
+        });
+        </script>
+
+        <script type="text/javascript">
+
+        $('.add').click(function () {
+            var th = $(this).closest('.wrap').find('.count');
+            th.val(+th.val() + 1);
+        });
+
+        $('.sub').click(function () {
+            var th = $(this).closest('.wrap').find('.count');
+            if (th.val() > 1) th.val(+th.val() - 1);
+        });
+
+       
+        $(".sidebar-nav li").click(function (e) {
+            $(".sidebar-nav li").removeClass("active");
+            $(this).addClass("active");
+        });
+        
+    </script>
+    
+
     <script>
-        @* const Logindata = JSON.parse(localStorage.getItem("user_info")); *@
-        console.log("Logindata----->", Logindata);
+        document.getElementById("username").innerHTML = Logindata.user[0].first_name + " " + Logindata.user[0].sap_user_id;
+        console.log("Logindata on master page----->", Logindata);
         if (!Logindata) {
             window.location.href = "Login";
         }
         var menu=[] ;
         console.log("Logindata.user[0].role_id)->>",Logindata.user[0].role_id);
 
-        var menuOptions = roles_menus[Logindata.user[0].role_id];
+        //var menuOptions = roles_menus[Logindata.user[0].role_id];
+        var menuOptions = roles_menus[Logindata.user[0].role_id][0];
 
-
-
-        $.each(menuOptions, function(index, option) {
+        $.each(menuOptions, function(key, value) {
             var $li = $("<li>");
             var $a = $("<a>").addClass("nav-link").attr({
                 "asp-area": "",
                 "asp-controller": "Home",
-                "asp-action": option,
-                "href": option,
-            }).html(`<i class="fa fa-user"></i>${option}`);
+                "asp-action": key,
+                "href": key,
+            }).html(`<i class="fa fa-user"></i><span>${value}</span>`);
             $li.append($a);
             $("#sidebar-nav").append($li);
         });
@@ -111,38 +133,9 @@
         $li.append($b);
         $("#sidebar-nav").append($li);
 
-
-        @* $.each(menuOptions, function(index, option) {
-            var $li = $("<li>").text(option);
-            console.log($li);
-            $("#sidebar-nav").append($li);
-        }); *@
-
-
-        @* if(Logindata.user[0].role_id){
-            var menuOptions = roles_menus[Logindata.user[0].role_id];
-            var listItems = menuOptions.map(function(option) {
-                menu += `
-                    <li>
-                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="${option}"><i class="fa fa-user">${option}</a>
-                    </li>
-                `;
-            });
-        menu +=`
-                <li onclick="logout()">
-                    <a href="#"><i class="fa-solid fa-arrow-right-from-bracket"></i>LogOut</a>
-                </li>
-            `;
-        }
-
-       console.log("menu->>>",menu);
-        document.getElementById("sidebar-nav").innerHTML = menu; *@
     </script>
 
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-
+    
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
