--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -16,13 +16,16 @@
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400|Montserrat:700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+    <!--Google icon cdn -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@40,400,1,0" />   
     <!--Local css-->
     <link rel="stylesheet" type="text/css" href="~/css/sidebarandheader.css">
+    <link rel="stylesheet" type="text/css" href="~/css/section.css">
 </head>
 <body>
 
-    @* sidebar menu *@
-    <div id="wrapper"  class="toggled" >
+    @* sidebar menu   class="toggled"*@
+    <div id="wrapper"   >
          <!-- sidebar start -->
             <aside id="sidebar-wrapper">
             <div class="sidebar-brand">
@@ -43,15 +46,14 @@
             <div class="navbar-header">
                 <div class="header-inner">
                 <div>
-                    <a href="#" class="navbar-brand" id="sidebar-toggle"><i class="fa fa-bars"></i></a>
+                    <a href="#" class="navbar-brand" id="sidebar-toggle"><span class="material-symbols-rounded">menu</span></a>
                 </div>
                 <div class="header-inner-icon">
-                    <span><i class="fa fa-bell" aria-hidden="true"></i></span>
-                    <span><i class="fa fa-cart-plus" aria-hidden="true"></i></span>
-                    <span><i class="fa fa-user-circle" aria-hidden="true"></i></span><span id="username"></span>
+                    <span class="material-symbols-rounded">notifications</span>
+                    <span class="material-symbols-rounded"><a href="Cart">shopping_cart</a></span>
+                    <span class="material-symbols-rounded">account_circle</span><span id="username"></span>
                 </div>
                 </div>
-
             </div>
             </div>
         </nav>
@@ -75,6 +77,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script type="text/javascript">
+
+        // Check if the screen size matches a mobile device
+        var isMobile = window.matchMedia("(max-width: 767px)").matches;
+
+        // Add class if it's a mobile device
+        if (isMobile) {
+            document.getElementById("sidebar-wrapper").classList.add("toggled");
+        }
         const $button = document.querySelector('#sidebar-toggle');
         const $wrapper = document.querySelector('#wrapper');
 
@@ -129,13 +139,11 @@
             $("#sidebar-nav").append($li);
         });
         var $li = $("<li>");
-        $b = $("<a>").addClass("nav-link").attr({"onclick":"logout()"}).html(`<i class="fa fa-user"></i>LogOut`);
+        $b = $("<a>").addClass("nav-link").attr({"onclick":"logout()"}).html(`<i><span class="material-symbols-rounded">logout</span></i><span>LogOut</span>`);
         $li.append($b);
         $("#sidebar-nav").append($li);
 
     </script>
-
-    
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
