--- a/wwwroot/css/sidebarandheader.css
+++ b/wwwroot/css/sidebarandheader.css
@@ -18,7 +18,7 @@ a:focus {
 #wrapper {
   --aside-width: 250px;
   padding-left: 0;
-  transition: all 0.5s ease;
+  /* transition: all 0.5s ease; */
   position: relative;
 }
 
@@ -72,14 +72,14 @@ a:focus {
 .sidebar-nav > li a {
   display: block;
   text-decoration: none;
-  color: #757575;
+  color: #f3f3f3;
   font-weight: 600;
   font-size: 18px;
 }
 .toggled .sidebar-nav > li a > span {
   display: block;
   font-size: 13px;
-  line-height: 10px;
+  line-height: 14px;
 }
 .toggled .sidebar-nav > li > a i.fa {
   margin-left: -3px;
@@ -171,6 +171,9 @@ a:focus {
   #wrapper.toggled #sidebar-wrapper {
     width: 70px;
   }
+  #wrapper.toggled #sidebar-wrapper #sidebar-nav {
+    width: 70px;
+  }
 
   #wrapper.toggled #navbar-wrapper {
     position: absolute;
@@ -219,6 +222,7 @@ a:focus {
   #wrapper.toggled #sidebar-wrapper {
     width: 70px;
   }
+
   #wrapper.toggled #navbar-wrapper {
     position: absolute;
     margin-right: -250px;
@@ -298,6 +302,11 @@ a:focus {
 
 /* PRODUCT CARD START */
 
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 .product-card {
   background-color: #f5f6fa;
   border-radius: 10px;
