bell icon and cart count

--- a/wwwroot/css/section.css
+++ b/wwwroot/css/section.css
@@ -8,3 +8,12 @@
 .notfoundimg {
   width: fit-content;
 }
+
+.stockcount {
+  border: none;
+  background: none;
+  outline: none;
+}
+.error {
+  color: red;
+}
