--- a/Views/Home/NewIndent.cshtml
+++ b/Views/Home/NewIndent.cshtml
@@ -8,7 +8,7 @@
           <div class="col-md-3">
             <div class="form-group">
               <select class="form-control" id="myDropdown1" name="sellist1">
-               @* option value from api *@
+                        @* option value from api *@
               </select>
             </div>
           </div>
@@ -17,7 +17,7 @@
               <form>
                 <div class="search-container-inner">
                   <input type="text" id="searchIndent" placeholder="Search.." name="search">
-                  <button type="submit"><i class="fa fa-search"></i></button>
+                  <button type="submit"><span class="material-symbols-rounded">search</span></button>
                 </div>
               </form>
             </div>
@@ -35,7 +35,7 @@
           </div>
           <div class="col-md-1">
             <div class="filter-btn-wrap">
-              <button type="submit"><i class="fa fa-filter"></i></button>
+              <button type="submit"><span class="material-symbols-rounded">filter_alt</span></button>
             </div>
 
           </div>
