--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -17,10 +17,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!--Google icon cdn -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@40,400,1,0" />   
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+@* <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@40,400,1,0" /> *@
     <!--Local css-->
     <link rel="stylesheet" type="text/css" href="~/css/sidebarandheader.css">
     <link rel="stylesheet" type="text/css" href="~/css/section.css">
+    <link rel="stylesheet" type="text/css" href="~/css/badge_notifiction.css">
 </head>
 <body>
 
@@ -49,9 +51,17 @@
                     <a href="#" class="navbar-brand" id="sidebar-toggle"><span class="material-symbols-rounded">menu</span></a>
                 </div>
                 <div class="header-inner-icon">
-                    <span class="material-symbols-rounded">notifications</span>
-                    <span class="material-symbols-rounded"><a href="Cart">shopping_cart</a></span>
-                    <span class="material-symbols-rounded">account_circle</span><span id="username"></span>
+                    <div class="position">
+                        <div class="badge red">4</div>
+                        <span class="material-symbols-rounded">notifications</span>
+                    </div>
+                    <div class="position">
+                        <div class="badge green">10</div>
+                        <a href="Cart"><span class="material-symbols-rounded">shopping_cart</span></a>
+                    </div>
+                    <div class="position">
+                        <span class="material-symbols-rounded">account_circle</span><span id="username"></span>
+                    </div>
                 </div>
                 </div>
             </div>
@@ -134,12 +144,12 @@
                 "asp-controller": "Home",
                 "asp-action": key,
                 "href": key,
-            }).html(`<i class="fa fa-user"></i><span>${value}</span>`);
+            }).html(`<span class="material-symbols-rounded">content_paste_go</span><span>${value}</span>`);
             $li.append($a);
             $("#sidebar-nav").append($li);
         });
         var $li = $("<li>");
-        $b = $("<a>").addClass("nav-link").attr({"onclick":"logout()"}).html(`<i><span class="material-symbols-rounded">logout</span></i><span>LogOut</span>`);
+        $b = $("<a>").addClass("nav-link").attr({"onclick":"logout()"}).html(`<span class="material-symbols-rounded">logout</span><span>LogOut</span>`);
         $li.append($b);
         $("#sidebar-nav").append($li);
 
