--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
     <link rel="stylesheet" type="text/css" href="~/css/sidebarandheader.css">
     <link rel="stylesheet" type="text/css" href="~/css/section.css">
     <link rel="stylesheet" type="text/css" href="~/css/badge_notifiction.css">
+    <link rel="stylesheet" type="text/css" href="~/css/Cart.css">
 </head>
 <body>
 
@@ -52,7 +53,7 @@
                 </div>
                 <div class="header-inner-icon">
                     <div class="position">
-                        <div class="badge red">4</div>
+                        <div class="badge red" id="notifications_no"></div>
                         <span class="material-symbols-rounded">notifications</span>
                     </div>
                     <div class="position">
