--- a/Views/Home/NewIndent.cshtml
+++ b/Views/Home/NewIndent.cshtml
@@ -53,6 +53,50 @@
         @* card end *@
       </div>
 
+    <div>
+        <!--Pagination 4-->
+        <nav class="pagination-wrap"
+            aria-label="pagination example" style="display: flex;flex-direction: row;justify-content: center;">
+            <ul
+                class="pagination pagination-circle justify-content-center" id="paginationlist" >
+
+                @* <li class="page-item disabled">
+                    <a class="page-link prev"
+                        aria-label="Previous">
+                        <span
+                            aria-hidden="true">&#10094;</span>
+                        <span
+                            class="sr-only">Previous</span>
+                    </a>
+                </li> *@
+
+                
+                @* <li class="page-item active"><a
+                        class="page-link">1</a></li>
+                <li class="page-item"><a
+                        class="page-link">2</a></li>
+                <li class="page-item"><a
+                        class="page-link">3</a></li>
+                <li class="page-item"><a
+                        class="page-link">4</a></li>
+                <li class="page-item"><a
+                        class="page-link">5</a></li> *@
+
+                
+                @* <li class="page-item">
+                    <a class="page-link next"
+                        aria-label="Next">
+                        <span
+                            aria-hidden="true">&#10095;</span>
+                        <span
+                            class="sr-only">Next</span>
+                    </a>
+                </li> *@
+            </ul>
+        </nav>
+    </div>
+    <br>
+    <br>
     </section>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
