--- a/wwwroot/css/Cart.css
+++ b/wwwroot/css/Cart.css
@@ -30,4 +30,11 @@
   display: block;
   margin: 0;
 }
+.wrap {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 5px;
+}
+
 /* ----------- CART END ---------- */
