--- a/wwwroot/css/badge_notifiction.css
+++ b/wwwroot/css/badge_notifiction.css
@@ -35,9 +35,9 @@
   min-width: 23px;
   height: 23px;
   padding: 2px 5px 0 5px;
-  border: 3px solid #f4fdff;
-  border-radius: 500px;
-  font-size: 9px;
+  border: 2px solid #f4fdff;
+  border-radius: 50%;
+  font-size: 10px;
   font-weight: 600;
   color: #fff;
   text-align: center;
