--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -21,7 +21,7 @@
                         onsubmit="javascript:return CheckAll()">
                     <div class="form-box">
                         <label>Email:</label>
-                        <input type="email" placeholder="Enter email" name="Username" id="email" class="form-input" required>
+                        <input type="email" placeholder="Enter email" name="email" id="email" class="form-input" required>
 
                     </div>
                     <div class="form-box">
@@ -30,7 +30,7 @@
 
                     </div>
                     <div class="form-box">
-                        <button class="login-btn" id="submit" onclick="Submit()" type="submit">Login To GRIM</button>
+                        <button class="login-btn" id="submit" type="submit">Login To GRIM</button>
                         <div class="forgot-pass">
                             <a href="#" onclick="forgot()" title="Forgot Password?">Forgot Password?</a>
                         </div>
@@ -74,7 +74,7 @@
             </div>
         </div>
 @* spinner end *@
-
+    <div class="notification"></div>
     <!-- Login script -->
     <script src="./js/Login/Login.js"></script>
 
