--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
     <link rel="stylesheet" type="text/css" href="~/css/badge_notifiction.css">
     <link rel="stylesheet" type="text/css" href="~/css/Cart.css">
     <link rel="stylesheet" type="text/css" href="~/css/common.css">
-    <link rel="stylesheet" type="text/css" href="~/css/NewIndent.css">
+    @* <link rel="stylesheet" type="text/css" href="~/css/NewIndent.css"> *@
     @* <link rel="stylesheet" type="text/css" href="~/css/sidebarandheader.css"> *@
 </head>
 <body>
@@ -122,9 +122,9 @@
     <!-- Jquery CDN Link -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
     <script type="text/javascript">
-        var host = "https://172.16.1.69:3002";
-        var path = "/api/v4/";
+      
         // Check if the screen size matches a mobile device
         var isMobile = window.matchMedia("(max-width: 767px)").matches;
 
