--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,7 +28,12 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 @* <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@40,400,1,0" /> *@
     <!--Local css-->
+
+    @* toastr  css*@
+    <link rel="stylesheet" type="text/css" href="~/assets/toastr/toastr.min.css">
+
     <link rel="stylesheet" type="text/css" href="~/css/section.css">
+    <link rel="stylesheet" type="text/css" href="~/assets/toastr/toastr.min.css">
     <link rel="stylesheet" type="text/css" href="~/css/badge_notifiction.css">
     <link rel="stylesheet" type="text/css" href="~/css/Cart.css">
     <link rel="stylesheet" type="text/css" href="~/css/common.css">
@@ -42,10 +47,13 @@
          <!-- sidebar start -->
             <aside id="sidebar-wrapper">
             <div class="sidebar-brand">
-                <h2>Logo</h2>
+                 <a class="nav-link">                    
+                    <img src="https://172.16.1.69/img/logo.ad88c674.png">
+                    <span><b>GRIM</b></span>
+                </a>
             </div>
           
-                <ul class="sidebar-nav" id="sidebar-nav">
+                <ul class="sidebar-nav" id="sidebar-nav">                   
                     @* display all side menu name *@
                 </ul> 
          
@@ -64,7 +72,7 @@
                 <div class="header-inner-icon">
                     <div class="position">
                         <div class="badge red" id="notifications_no"></div>
-                        <span class="material-symbols-rounded">notifications</span>
+                        <span  data-toggle="modal" data-target="#myModal2" class="material-symbols-rounded">notifications</span>
                     </div>
                     <a href="Cart">
                         <div class="position">
@@ -110,11 +118,41 @@
     @* sidebar menu end *@
 
 
+<!-- Modal -->
+    <div class="modal right fade notification-right-bar" id="myModal2" tabindex="-1" role="dialog"
+        aria-labelledby="myModalLabel2">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
 
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                            aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel2">Notifications</h4>
+                </div>
+
+                <div class="modal-body" id="noticationbody">
+                    @* <div class="notification-wrap">
+                        <div class="notification-inner">
+                            <div class="user-img"><img src="./images/girl.png"></div>
+                            <div class="user-info">
+                                <h3>New Indent 52 Created </h3>
+                                <p>(36006235 Apple Macbook Air 13")</p>
+                                <p>20 Days ago</p>
+                            </div>
+                        </div>
+                    </div> *@
+                </div>
+
+            </div><!-- modal-content -->
+        </div><!-- modal-dialog -->
+    </div><!-- modal -->
+
+
+    <script src="~/assets/toastr/toastr.min.js"></script>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-
+    
     <script src="~/js/main.js"></script>
     <script src="~/js/Home/Home.js"></script>
 
@@ -142,27 +180,6 @@
             $wrapper.classList.toggle('toggled');
         });
         </script>
-
-        <script type="text/javascript">
-
-        $('.add').click(function () {
-            var th = $(this).closest('.wrap').find('.count');
-            th.val(+th.val() + 1);
-        });
-
-        $('.sub').click(function () {
-            var th = $(this).closest('.wrap').find('.count');
-            if (th.val() > 1) th.val(+th.val() - 1);
-        });
-
-       
-        $(".sidebar-nav li").click(function (e) {
-            $(".sidebar-nav li").removeClass("active");
-            $(this).addClass("active");
-        });
-        
-    </script>
-    
 
     <script>
         document.getElementById("username").innerHTML = Logindata.user[0].first_name + " " + Logindata.user[0].sap_user_id;
