--- a/Views/Shared/_Login.cshtml
+++ b/Views/Shared/_Login.cshtml
@@ -10,13 +10,12 @@
     <link rel="stylesheet" href="~/GrimLogin.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/Login.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.css">
+    @* toastr  css*@
+    <link rel="stylesheet" type="text/css" href="~/assets/toastr/toastr.min.css">
     <!-- Google Fonts Link -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
           rel="stylesheet">
 
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.1/css/toastr.css" rel="stylesheet" />
-  
   <style>
     .notification {
       display: none;
@@ -34,6 +33,7 @@
 <body>
 
     @RenderBody()
+    <script src="~/assets/toastr/toastr.min.js"></script>
     <script src="~/js/Login/login.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
