--- a/Views/Home/Cart.cshtml
+++ b/Views/Home/Cart.cshtml
@@ -165,7 +165,7 @@
 
                     <button class="common-button common-blue-button" onclick="window.print();return false;"><span class="material-symbols-rounded">print</span> PREVIEW INDENT</button>
 
-                    <button class="common-button common-orange-button" onclick="clearcart()">CLEAR</button>
+                    <button class="common-button common-orange-button"  onclick="clearcart()" data-toggle="modal" data-target="#exampleModalCenter">CLEAR</button>
 
                     <button class="common-button common-yellow-button" onclick="Pordectorder()">PLACE INDENT</button>
 
