--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -131,22 +131,39 @@
                 </div>
 
                 <div class="modal-body" id="noticationbody">
-                    @* <div class="notification-wrap">
-                        <div class="notification-inner">
-                            <div class="user-img"><img src="./images/girl.png"></div>
-                            <div class="user-info">
-                                <h3>New Indent 52 Created </h3>
-                                <p>(36006235 Apple Macbook Air 13")</p>
-                                <p>20 Days ago</p>
-                            </div>
-                        </div>
-                    </div> *@
+                   
                 </div>
 
             </div><!-- modal-content -->
         </div><!-- modal-dialog -->
     </div><!-- modal -->
 
+<!-- Button trigger modal -->
+@* <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+  Launch demo modal
+</button> *@
+
+<!-- Modal center model yes and no -->
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Modal center model yes and no -->
 
     <script src="~/assets/toastr/toastr.min.js"></script>
 
