cart valid update

--- a/wwwroot/css/Cart.css
+++ b/wwwroot/css/Cart.css
@@ -58,3 +58,11 @@
 .deleteicon {
   color: red;
 }
+.showmsg {
+  display: flex;
+  align-content: center;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
