--- a/wwwroot/css/common.css
+++ b/wwwroot/css/common.css
@@ -994,12 +994,16 @@ nav.pagination-wrap {
 .notification-wrap .notification-inner .user-img img {
   width: 45px;
   max-width: 100%;
+  border-radius: 50%;
+  flex-wrap: wrap;
 }
 .notification-wrap .notification-inner .user-info {
   padding: 10px;
+  flex-wrap: wrap;
 }
 .notification-wrap .notification-inner .user-info h3 {
-  font-size: 17px;
+  font-size: 15px;
+  font-weight: bold;
   margin-bottom: 0;
 }
 .notification-wrap:hover .notification-inner .user-info h3 {
@@ -1007,5 +1011,6 @@ nav.pagination-wrap {
 }
 .notification-wrap .notification-inner .user-info p {
   margin-bottom: 0;
+  font-size: 12px;
 }
 /* -------------notification css end-------------- */
